--- a/G8103/.settings/org.eclipse.wst.common.component
+++ b/G8103/.settings/org.eclipse.wst.common.component
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="G8103">
+    <wb-module deploy-name="G8103-Static">
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
-        <dependent-module archiveName="G8103admon.war" deploy-path="/" handle="module:/resource/G8103admon/G8103admon">
+        <dependent-module archiveName="G8103admon-static.war" deploy-path="/" handle="module:/resource/G8103admon-static/G8103admon-static">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="G8103wallapop.war" deploy-path="/" handle="module:/resource/G8103wallapop/G8103wallapop">
-            <dependent-object/>
+        <dependent-module archiveName="G8103Database-static.jar" deploy-path="/lib" handle="module:/resource/G8103Database-static/G8103Database-static">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="G8103Database.jar" deploy-path="/lib" handle="module:/resource/G8103Database/G8103Database">
+        <dependent-module archiveName="G8103wallapop-static.war" deploy-path="/" handle="module:/resource/G8103wallapop-static/G8103wallapop-static">
+            <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
