--- a/G8103admon/.settings/org.eclipse.wst.common.component
+++ b/G8103admon/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="G8103admon">
+    <wb-module deploy-name="G8103admon-static">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="G8103admon"/>
-        <property name="java-output-path" value="/G8103admon/build/classes"/>
+        <property name="java-output-path" value="/G8103admon-static/build/classes"/>
+        <property name="context-root" value="G8103admon-static"/>
     </wb-module>
 </project-modules>
